# 6502-emulator

./: 6502.cpp  6502.h  CMakeLists.txt  README.md  tests.cpp
src/: 6502.cpp  6502.h
tests/: INC_DEC.cpp  LD.cpp  arithmetic.cpp  branch.cpp  compare.cpp  flags.cpp  increment_decrement.cpp  jump.cpp  logic.cpp  shift.cpp  stack.cpp  tests.cpp  transfer.cpp
